@@ -40,6 +40,7 @@ $pconfig['subnet'] = $config['interfaces']['lan']['subnet'];
 if (ipv6enabled()) {
 	$pconfig['ipv6ra'] = isset($config['interfaces']['lan']['ipv6ra']);
 	$pconfig['ipv6ram'] = isset($config['interfaces']['lan']['ipv6ram']);
+	$pconfig['ipv6ramtu'] = $config['interfaces']['lan']['ipv6ramtu'];
 	$pconfig['ipv6rao'] = isset($config['interfaces']['lan']['ipv6rao']);
 	
 	if ($config['interfaces']['lan']['ipaddr6'] == "6to4") {
@@ -105,6 +106,7 @@ if ($_POST) {
 			$oldsubnet6 = $config['interfaces']['lan']['subnet6'];
 			$oldipv6ra = $config['interfaces']['lan']['ipv6ra'];
 			$oldipv6ram = $config['interfaces']['lan']['ipv6ram'];
+			$oldipv6ramtu = $config['interfaces']['lan']['ipv6ramtu'];
 			$oldipv6rao = $config['interfaces']['lan']['ipv6rao'];
 			$oldipv6slalen = $config['interfaces']['lan']['slalen'];
 			$oldipv6slaid = $config['interfaces']['lan']['slaid'];
@@ -114,6 +116,7 @@ if ($_POST) {
 				unset($config['interfaces']['lan']['subnet6']);
 				$config['interfaces']['lan']['ipv6ra'] = $_POST['ipv6ra'] ? true : false;
 				$config['interfaces']['lan']['ipv6ram'] = $_POST['ipv6ram'] ? true : false;
+				$config['interfaces']['lan']['ipv6ramtu'] = $_POST['ipv6ramtu'] ;
 				$config['interfaces']['lan']['ipv6rao'] = $_POST['ipv6rao'] ? true : false;
 			} else if ($_POST['ipv6mode'] == "DHCP-PD") {
 				$config['interfaces']['lan']['ipaddr6'] = "DHCP-PD";
@@ -125,18 +128,21 @@ if ($_POST) {
 				$pconfig['slalen'] = 64 - $_POST['ispfix'];
 				$config['interfaces']['lan']['ipv6ra'] = $_POST['ipv6ra'] ? true : false;
 				$config['interfaces']['lan']['ipv6ram'] = $_POST['ipv6ram'] ? true : false;
+				$config['interfaces']['lan']['ipv6ramtu'] = $_POST['ipv6ramtu'] ;
 				$config['interfaces']['lan']['ipv6rao'] = $_POST['ipv6rao'] ? true : false;
 			} else if ($_POST['ipv6mode'] == "static") {
 				$config['interfaces']['lan']['ipaddr6'] = $_POST['ipaddr6'];
 				$config['interfaces']['lan']['subnet6'] = $_POST['subnet6'];
 				$config['interfaces']['lan']['ipv6ra'] = $_POST['ipv6ra'] ? true : false;
 				$config['interfaces']['lan']['ipv6ram'] = $_POST['ipv6ram'] ? true : false;
+				$config['interfaces']['lan']['ipv6ramtu'] = $_POST['ipv6ramtu'] ;
 				$config['interfaces']['lan']['ipv6rao'] = $_POST['ipv6rao'] ? true : false;
 			} else {
 				unset($config['interfaces']['lan']['ipaddr6']);
 				unset($config['interfaces']['lan']['subnet6']);
 				unset($config['interfaces']['lan']['ipv6ra']);
 				unset($config['interfaces']['lan']['ipv6ram']);
+				unset($config['interfaces']['lan']['ipv6ramtu']);
 				unset($config['interfaces']['lan']['ipv6rao']);
 			}
 			
@@ -146,6 +152,7 @@ if ($_POST) {
 						  $oldipv6slaid != $config['interfaces']['lan']['slanid'] ||
 						  isset($oldipv6ra) != isset($_POST['ipv6ra'])  ||
 						  isset($oldipv6ram) != isset($_POST['ipv6ram'])  ||
+						  isset($oldipv6ramtu) != isset($_POST['ipv6ramtu'])  ||
 						  isset($oldipv6rao) != isset($_POST['ipv6rao']));
 		}
 		
@@ -184,6 +191,7 @@ function enable_change(enable_over) {
 	document.iform.ipv6ra.disabled = !(document.iform.ipv6mode.selectedIndex != 0 || enable_over);
 	document.iform.ipv6ram.disabled = !(document.iform.ipv6mode.selectedIndex != 0 || enable_over);
 	document.iform.ipv6rao.disabled = !(document.iform.ipv6mode.selectedIndex != 0 || enable_over);
+	document.iform.ipv6ramtu.disabled = !(document.iform.ipv6mode.selectedIndex != 0 || enable_over);
 	document.iform.ispfix.disabled = !pd;
 	document.iform.slaid.disabled = !pd;
 <?php endif; ?>
@@ -271,7 +279,7 @@ function enable_change(enable_over) {
                       </option>
                       <?php endfor; ?>
                     </select><br>
-					   Select site-level aggregator ID and ISP prefix length.<br>
+					   Select site-level aggregator ID and ISP prefix length (decimal notation).<br>
 					   If ID is 1 and the client is delegated an IPv6 prefix 2001:db8:ffff and prefix 48, this will result in
 					   a single IPv6 prefix, 2001:db8:ffff:1::/64 .</td>
                 </tr>
@@ -296,8 +304,10 @@ function enable_change(enable_over) {
 					<input type="checkbox" name="ipv6ram" id="ipv6ram" value="1" <?php if ($pconfig['ipv6ram']) echo "checked";?>> <strong>Managed address configuration</strong><br>
 					If this option is checked, other hosts on this interface will use DHCPv6 for address allocation and non address allocation configuration.<br>
 					<input type="checkbox" name="ipv6rao" id="ipv6rao" value="1" <?php if ($pconfig['ipv6rao']) echo "checked";?>> <strong>Other stateful configuration</strong><br>
-					If this option is checked, other hosts on this interface will use DHCPv6 for non address allocation configuration, such as DNS.
-                  </td>
+					If this option is checked, other hosts on this interface will use DHCPv6 for non address allocation configuration, such as DNS.<br>
+                    <strong>MTU</strong> <input name="ipv6ramtu" type="text" class="formfld" id="ipv6ramtu" size="4" value="<?=htmlspecialchars($pconfig['ipv6ramtu']);?>"> bytes <br>
+                    Enter the MTU you want advertised here.<br>
+				</td>
                 </tr>
                 <?php endif; ?>
 				<?php /* Wireless interface? */
