@@ -49,6 +49,7 @@ $pconfig['enable'] = isset($optcfg['enable']);
 if (ipv6enabled()) {
 	$pconfig['ipv6ra'] = isset($optcfg['ipv6ra']);
 	$pconfig['ipv6ram'] = isset($optcfg['ipv6ram']);
+	$pconfig['ipv6ramtu'] = isset($optcfg['ipv6ramtu']);
 	$pconfig['ipv6rao'] = isset($optcfg['ipv6rao']);
 	
 	if ($optcfg['ipaddr6'] == "6to4") {
@@ -132,18 +133,21 @@ if ($_POST) {
 				unset($optcfg['subnet6']);
 				$optcfg['ipv6ra'] = $_POST['ipv6ra'] ? true : false;
 				$optcfg['ipv6ram'] = $_POST['ipv6ram'] ? true : false;
+				$optcfg['ipv6ramtu'] = $_POST['ipv6ramtu'] ? true : false;
 				$optcfg['ipv6rao'] = $_POST['ipv6rao'] ? true : false;
 			} else if ($_POST['ipv6mode'] == "static") {
 				$optcfg['ipaddr6'] = $_POST['ipaddr6'];
 				$optcfg['subnet6'] = $_POST['subnet6'];
 				$optcfg['ipv6ra'] = $_POST['ipv6ra'] ? true : false;
 				$optcfg['ipv6ram'] = $_POST['ipv6ram'] ? true : false;
+				$optcfg['ipv6ramtu'] = $_POST['ipv6ramtu'] ? true : false;
 				$optcfg['ipv6rao'] = $_POST['ipv6rao'] ? true : false;
 			} else {
 				unset($optcfg['ipaddr6']);
 				unset($optcfg['subnet6']);
 				unset($optcfg['ipv6ra']);
 				unset($optcfg['ipv6ram']);
+				unset($optcfg['ipv6ramtu']);
 				unset($optcfg['ipv6rao']);
 			}
 		}
@@ -188,6 +192,7 @@ function enable_change(enable_over) {
 	document.iform.subnet6.disabled = !((all_enable && !bridge_enable && ipv6_enable) || enable_over);
 	document.iform.ipv6ra.disabled = !((all_enable && !bridge_enable && document.iform.ipv6mode.selectedIndex != 0) || enable_over);
 	document.iform.ipv6ram.disabled = !((all_enable && !bridge_enable && document.iform.ipv6mode.selectedIndex != 0) || enable_over);
+	document.iform.ipv6ramtu.disabled = !((all_enable && !bridge_enable && document.iform.ipv6mode.selectedIndex != 0) || enable_over);
 	document.iform.ipv6rao.disabled = !((all_enable && !bridge_enable && document.iform.ipv6mode.selectedIndex != 0) || enable_over);
 <?php endif; ?>
 
@@ -305,7 +310,9 @@ function enable_change(enable_over) {
 					<input type="checkbox" name="ipv6ram" id="ipv6ram" value="1" <?php if ($pconfig['ipv6ram']) echo "checked";?>> <strong>Managed address configuration</strong><br>
 					If this option is checked, other hosts on this interface will use DHCPv6 for address allocation and non address allocation configuration.<br>
 					<input type="checkbox" name="ipv6rao" id="ipv6rao" value="1" <?php if ($pconfig['ipv6rao']) echo "checked";?>> <strong>Other stateful configuration</strong><br>
-					If this option is checked, other hosts on this interface will use DHCPv6 for non address allocation configuration, such as DNS.
+					If this option is checked, other hosts on this interface will use DHCPv6 for non address allocation configuration, such as DNS.<br>
+					<strong>MTU</strong> <input name="ipv6ramtu" type="text" class="formfld" id="ipv6ramtu" size="4" value="<?=htmlspecialchars($pconfig['ipv6ramtu']);?>"> bytes <br>
+                    Enter the MTU you want advertised here.<br>
                   </td>
                 </tr>
                 <?php endif; ?>
